--- a/css/business.css
+++ b/css/business.css
@@ -15,14 +15,15 @@ body{
 	flex-direction:column;
 }
 .business img{
-	height:130px;
-	width:130px;
+	width: 200px;
+    height: 200px;
 	border-radius:25px;
 	padding:10px;
 }
 h1{
 	color:white;
     padding: 28px;
+    margin-left: 40%;
 }
  h2,h3,h4{
 	padding:1rem 0;
@@ -32,7 +33,7 @@ h1{
  }
 .business-info{
 	background-color:#CDAAFF;
-	width:90%;
+	width:50%;
 	border-radius:2rem;
 	margin: 15px auto;
 }
@@ -85,7 +86,8 @@ h1{
 }
 #title
 {   
-text-align: center;
+text-align: left;
+padding-left: 20px;
 }
 #productimages
 {
