--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ h1 {
 }
 .businessItem:hover {
 	cursor:pointer;
-	background-color: white;
+	background-color: #150529;
 	border: 5px solid #CDAAFF;
 	transition:0.3ms ease;
 }
@@ -39,7 +39,7 @@ h1 {
 	display:flex;
 	flex-direction:column;
 	padding:10px;
-	color: black;
+	color:white;
 }
 
 .col_business img{
@@ -91,3 +91,42 @@ h1 {
     bottom: -4px;
     left: 20px;
 }
+#events-list{
+	background-color:#1A0637;
+    display: flex;
+    justify-content: left;
+    color: aliceblue;
+    padding: 40px;
+}
+.blog-img img{
+    width: 250px;
+    height: 250px;
+    padding: 20px;
+    border-radius:15%;
+    
+}
+.blog-content{
+    color: aliceblue;
+}
+.title{
+    color: aliceblue;
+}
+.blog{
+    display: flex;
+    justify-content: ;
+}
+.blog-item{
+    display:flex;
+	width:90%;
+	background-color: #CDAAFF;
+	border-radius: 2rem;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	margin: 15px auto;
+
+    
+}
+hr{
+    height: 20px;
+    width: 100%;
+}
+
