--- a/css/business.css
+++ b/css/business.css
@@ -15,15 +15,14 @@ body{
 	flex-direction:column;
 }
 .business img{
-	width: 200px;
-    height: 200px;
+	height:130px;
+	width:130px;
 	border-radius:25px;
 	padding:10px;
 }
 h1{
 	color:white;
     padding: 28px;
-    margin-left: 40%;
 }
  h2,h3,h4{
 	padding:1rem 0;
@@ -33,7 +32,7 @@ h1{
  }
 .business-info{
 	background-color:#CDAAFF;
-	width:50%;
+	width:90%;
 	border-radius:2rem;
 	margin: 15px auto;
 }
@@ -86,8 +85,7 @@ h1{
 }
 #title
 {   
-text-align: left;
-padding-left: 20px;
+text-align: center;
 }
 #productimages
 {
